--- a/src/app/pages/plantillas/plantillas.component.html
+++ b/src/app/pages/plantillas/plantillas.component.html
@@ -18,7 +18,7 @@
             </mat-tab>
             <mat-tab label="Detalle">
                 <div class="bigger-container">
-                    <app-form-detalle-resolucion></app-form-detalle-resolucion>
+                    <app-form-detalle-resolucion [resolucionId]="resolucionId"></app-form-detalle-resolucion>
                 </div>
             </mat-tab>
         </mat-tab-group>
