--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
@@ -3,6 +3,74 @@
         <mat-grid-tile>
             <div class="section">
                 <h2 class="section-title">Formato de la Resolución</h2>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Numero de resolucion</mat-label>
+                    <input matInput type="text" >
+                </mat-form-field>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Titulo de la resolución</mat-label>
+                    <input matInput type="text" >
+                    <mat-error>
+                        Indique el título de la resolución
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Nivel académico</mat-label>
+                    <mat-select>
+                        <mat-option>--Seleccionar--</mat-option>
+                        <mat-option *ngFor="let nivel of niveles">
+                            {{ nivel.Nombre }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        Seleccione el nivel académico 
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Dedicación</mat-label>
+                    <mat-select>
+                        <mat-option>--Seleccionar--</mat-option>
+                        <mat-option *ngFor="let dedicacion of dedicaciones">
+                            {{ dedicacion.Nombre }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        Seleccione la dedicación 
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Facultad</mat-label>
+                    <mat-select>
+                        <mat-option>--Seleccionar--</mat-option>
+                        <mat-option *ngFor="let facultad of facultades">
+                            {{ facultad.Nombre }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        Seleccione la facultad 
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Tipo de resolución</mat-label>
+                    <mat-select>
+                        <mat-option>--Seleccionar--</mat-option>
+                        <mat-option *ngFor="let tipo of tiposResoluciones">
+                            {{ facultad.Nombre }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        Seleccione la facultad 
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field style="width: 100%">
+                    <mat-label>Preambulo:</mat-label>
+                    <textarea matInput cols="20" rows="5"></textarea>
+                </mat-form-field>
+                <mat-form-field style="width: 100%">
+                    <mat-label>Consideración:</mat-label>
+                    <textarea matInput cols="20" rows="5"></textarea>
+                </mat-form-field>
+                <button mat-button class="button button-add" type="button" (click)="generarVistaPrevia()">Vista previa de la resolución</button>
             </div>
         </mat-grid-tile>
         <mat-grid-tile>
@@ -10,16 +78,25 @@
                 <h2 class="section-title">Artículos</h2>
                 <mat-expansion-panel *ngFor="let articulo of articulos; let i=index">
                     <mat-expansion-panel-header>
-                        <mat-panel-title>Artículo {{i + 1}}</mat-panel-title>
+                        <mat-panel-title><b>Artículo {{i + 1}}</b></mat-panel-title>
                     </mat-expansion-panel-header>
                     <mat-form-field style="width: 100%">
                         <mat-label>Texto:</mat-label>
                         <textarea matInput cols="20" rows="5"></textarea>
                     </mat-form-field>
-                              
-                    
+                    <div class="paragrafo" *ngFor="let paragrafo of articulo.paragrafos; let j=index" >
+                        <mat-form-field style="width: 90%">
+                            <mat-label>Paragrafo {{j + 1}}:</mat-label>
+                            <textarea matInput cols="20" rows="3"></textarea>
+                        </mat-form-field>
+                        <button mat-button class="button button-remove" type="button" (click)="eliminarParagrafo(i, j)">Eliminar parágrafo</button>
+                    </div>
+                    <br>
+                    <br>
+                    <mat-divider></mat-divider>
+                    <br>
                     <button mat-button class="button button-remove" type="button" (click)="eliminarArticulo(i)">Eliminar artículo</button>
-                    <button mat-button class="button button-add" type="button" (click)="agregarParagrafo()">Agregar parágrafo</button>
+                    <button mat-button class="button button-add" type="button" (click)="agregarParagrafo(i)">Agregar parágrafo</button>
                 </mat-expansion-panel>
                 <button mat-button class="button button-add" type="button" (click)="agregarArticulo()">Agregar artículo</button>
             </div>
