feat: Se corrigen errores reportados por la herramienta lint antes de comenzar. udistrital/resoluciones_mid_v2#10

--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
@@ -85,7 +85,7 @@
                 <h2 class="section-title">Artículos</h2>
                 <mat-expansion-panel *ngFor="let articulo of contenidoResolucion.Articulos; let i=index">
                     <mat-expansion-panel-header>
-                        <mat-panel-title><b>Artículo {{i + 1}}</b></mat-panel-title>
+                        <mat-panel-title><strong>Artículo {{i + 1}}</strong></mat-panel-title>
                     </mat-expansion-panel-header>
                     <mat-form-field style="width: 100%">
                         <mat-label>Texto:</mat-label>
