feat: Se generan vistas de acuerdo a mockups par modulo Gestión de resoluciones. udistrital/resoluciones_mid_v2#10

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,15 @@
-:host ::ng-deep ng2-st-tbody-edit-delete {
-    display: flex;
-    justify-content: space-evenly;
-}
+:host ::ng-deep {
+    ng2-st-actions, ng2-st-tbody-edit-delete, ng2-st-tbody-create-cancel {
+        display: flex;
+        justify-content: space-evenly;
+    }
 
-:host ::ng-deep ng2-st-actions {
-    display: flex;
-    justify-content: space-evenly;
-}
+    ng2-st-tbody-custom {
+        display: flex;
+        justify-content: space-around;
 
-:host ::ng-deep ng2-st-tbody-create-cancel {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-:host ::ng-deep ng2-st-tbody-custom {
-    display: flex;
-    justify-content: space-around;
+        a {
+            color: var(--primary);
+        }
+    }
 }
