--- a/src/app/pages/plantillas/plantillas.component.html
+++ b/src/app/pages/plantillas/plantillas.component.html
@@ -1,4 +1,4 @@
-<mat-card style="width: 99%">
+<mat-card class="card-oas">
     <mat-card-title class="plantillas-title"><h1>Módulo de plantillas</h1></mat-card-title>
     <mat-card-content>
         <mat-tab-group mat-stretch-tabs 
