--- a/src/app/pages/gestion-resoluciones/generacion-resolucion/generacion-resolucion.component.html
+++ b/src/app/pages/gestion-resoluciones/generacion-resolucion/generacion-resolucion.component.html
@@ -17,6 +17,7 @@
                 </mat-form-field>
             </div>
             <fieldset class="form-container" *ngIf="tipoResolucion === 'RVIN'">
+                <legend></legend>
                 <mat-grid-list cols="2" rowHeight="15vw">
                     <mat-grid-tile>
                         <mat-form-field class="form-field form-field-full" >
@@ -122,6 +123,7 @@
                 <button mat-button class="button button-submit" type="submit" (click)="generarResolucion()" [disabled]="!gform.valid" >Generar resolución</button>
             </fieldset>
             <fieldset class="form-container" *ngIf="tipoResolucion === 'RADD' || tipoResolucion === 'RRED' || tipoResolucion === 'RCAN'">
+                <legend></legend>
                 <mat-form-field class="selector-tipo" >
                     <mat-label>Numero de resolución</mat-label>
                     <input matInput type="text" pattern="[0-9]*" minlength="1" maxlength="5" name="numRes" #numRes="ngModel" [(ngModel)]="NumeroResolucion" required>
