--- a/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
+++ b/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
@@ -16,5 +16,6 @@
             [source]="resolucionesDocenteData"
             (custom)=eventHandler($event)
         ></ng2-smart-table>
+        <button mat-button class="button button-remove" type="button" (click)="volver()">Volver</button>
     </mat-card-content>
 </mat-card>
