--- a/src/app/pages/gestion-vinculaciones/modal-disponibilidad/modal-disponibilidad.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-disponibilidad/modal-disponibilidad.component.html
@@ -1,1 +1,6 @@
-<p>modal-disponibilidad works!</p>
+<div>
+    <h2 class="section-title">Disponibilidad</h2>
+    <mat-label>Valor total de cntratos de lso docentes seleccionados</mat-label>
+    <input type="text" [value]="" disabled>
+    <app-tablas-disponibilidades (seleccion)="seleccionado($event)"></app-tablas-disponibilidades>
+</div>
