feat: Se finaliza funcionalidad de registro de vinculaciones con selección de disponibilidades y rubros. #11

--- a/src/app/pages/gestion-vinculaciones/tablas-disponibilidades/tablas-disponibilidades.component.html
+++ b/src/app/pages/gestion-vinculaciones/tablas-disponibilidades/tablas-disponibilidades.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" rowHeight="500px">
+<mat-grid-list class="selector" cols="2" rowHeight="450px">
     <mat-grid-tile>
         <ng2-smart-table
             [settings]="disponibilidadesSettings"
