--- a/src/app/pages/admin-resoluciones/expedir-modificacion/expedir-modificacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-modificacion/expedir-modificacion.component.html
@@ -59,7 +59,7 @@
                     <mat-label>Resolución modificada</mat-label>
                     <input matInput type="number" name="numSem" [(ngModel)]="vigencia" disabled>
                 </mat-form-field>
-                <button mat-button class="button button-submit" type="button" (click)="olanda()">Realizar
+                <button mat-button class="button button-submit" type="button" (click)="cancelarExpedicion()">Realizar
                     expedición de la resolución</button>
                 <button mat-button class="button button-remove" type="button" (click)="cancelarExpedicion()">Cancelar</button>
             </div>
